compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__importable_does_not_add_extra_new_line_if_newline_exists.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: ""
---
----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   5_dep.wobble
  desc:   dep
  edits:
    [2:0-2:0]: "dep.wobble"
    [0:0-0:0]: "import dep\n"
