compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__importable_module_function_from_deep_module.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 323
expression: "\n"
---
|


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   5_dep.wobble
  desc:   a/b/dep
  edits:
    [1:0-1:0]: "dep.wobble"
    [0:0-0:0]: "import a/b/dep\n\n"
