compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__importable_module_function_with_existing_imports.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 308
expression: "\n//// Some module comments\n// Some other whitespace\n\nimport dep2\n"
---
|
//// Some module comments
// Some other whitespace

import dep2


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   5_dep.wobble
  desc:   dep
  edits:
    [1:0-1:0]: "dep.wobble"
    [0:0-0:0]: "import dep\n\n"
dep2.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   3_dep2.wobble
  desc:   app
  edits:
    [1:0-1:0]: "dep2.wobble"
