compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__imported_unqualified_public_enum.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{Left}\n"
---
|
import dep.{Left}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Left
  kind:   EnumMember
  detail: Direction
  sort:   3_Left
  desc:   app
  edits:
    [1:0-1:0]: "Left"
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
dep.Left
  kind:   EnumMember
  detail: Direction
  sort:   3_dep.Left
  desc:   app
  edits:
    [1:0-1:0]: "dep.Left"
dep.Right
  kind:   EnumMember
  detail: Direction
  sort:   3_dep.Right
  desc:   app
  edits:
    [1:0-1:0]: "dep.Right"
