compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__imported_unqualified_public_record.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 441
expression: "\nimport dep.{Box}\n"
---
|
import dep.{Box}


----- Completion content -----
Box
  kind:   Constructor
  detail: fn(Int) -> Box
  sort:   3_Box
  desc:   app
  edits:
    [1:0-1:0]: "Box"
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
dep.Box
  kind:   Constructor
  detail: fn(Int) -> Box
  sort:   3_dep.Box
  desc:   app
  edits:
    [1:0-1:0]: "dep.Box"
