compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__in_custom_type_definition.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 513
expression: import dep
---
|import dep


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
