compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__internal_modules_from_same_package_are_included.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1130
expression: "import rakun\n\npub fn main() {\n  0\n}"
---
|import rakun

pub fn main() {
  0
}


----- Completion content -----
app/internal
  kind:   Module
  edits:
    [0:7-0:7]: "app/internal"
